Rework the new threshold and alerts topic, other edits

--- a/site/guide/monitoring/set-thresholds-and-alerts.qmd
+++ b/site/guide/monitoring/set-thresholds-and-alerts.qmd
@@ -3,56 +3,51 @@ title: "Set thresholds and alerts"
 date: last-modified
 ---
 
-When logging a metric using `log_metric()`, you can define *thresholds* that indicate the risk level associated with different metric values. You can also optionally configure *status flags* to indicate whether a metric passes custom acceptance criteria and use this to trigger alert notifications or escalate issues for follow-up.
+When logging a metric with `log_metric()`, you can define thresholds or use the `passed` parameter to flag whether the metric meets performance criteria. If a metric breaches a threshold, stakeholders receive email alert notifications.
 
-## Why use thresholds
+These thresholds and alerts apply to metrics over time blocks[^1], helping you track model performance and identify issues more easily. Thresholds help you flag values that suggest drift, underperformance, or other types of risk—for example, by signaling low, medium, or high risk based on how a metric evolves over time.
 
-Thresholds help you track the operational status of a model by flagging metric values that may indicate drift, underperformance, or other forms of risk. For example, you might define thresholds that signal *low*, *medium*, or *high* risk based on the distribution of a metric over time.
+Together, thresholds and notifications improve your visibility into model performance and compliance risk, enabling timely intervention when needed.
 
-Once thresholds are defined, the {{< var validmind.platform >}} will highlight metric values using the appropriate status badge. This makes it easier to monitor performance and identify trends across model versions or time periods.
+::: {.attn}
 
-## Best practices
+## Prerequisites
 
-- Use thresholds to capture known risk boundaries based on historical or business benchmarks
-- Use the `passed` flag to apply more nuanced or domain-specific acceptance criteria
-- Start with visual indicators and only enable alerts for cases that truly require follow-up
-- Document your criteria for `passed` to ensure consistency and auditability
+- [x] {{< var link.login >}}
+- [x] Metrics over time have already been logged via the {{< var validmind.developer >}} for your model.[^1]
+- [x] You are a [{{< fa code >}} Developer]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^2]
 
-Thresholds and notifications work together to improve visibility into model performance and compliance risk, helping you take timely action when needed.
+:::
 
-## Define thresholds in `log_metric()`
+## Use a custom function
 
-You can define thresholds by passing a dictionary to the `thresholds` parameter in `log_metric()`:
+To programmatically evaluate whether a metric passes specific criteria, use a custom function:
 
-```python
+```
+def custom_evaluator(value):
+   return value > 0.6
+
 log_metric(
-   key="F1 Score",
-   value=0.72,
+   key="Test Metric",
+   value=0.65,
    recorded_at=datetime.now(),
-   thresholds={"medium_risk": 0.75, "high_risk": 0.6}
+   thresholds={"medium_risk": 0.6},
+   passed=custom_evaluator(0.65)
 )
 ```
 
 In this example:
 
-- Values below `0.75` are marked as *medium risk*
-- Values below `0.6` are marked as *high risk*
+- The custom function evaluates if `0.65 > 0.6`, returning `True`.
+- This evaluation results in `passed=True`, displaying a [{{< fa check >}} Satisfactory]{.bubble .green-bg} badge.
+- Separately, values at or below 0.6 are marked as medium risk by the threshold.
+- The threshold and `passed` parameter work independently.
 
-The thresholds are inclusive and cumulative: once a value falls below a threshold, it is marked with the highest applicable risk level.
+## Set the `passed` parameter
 
-Thresholds can be specified for any metric logged through `log_metric()` and are automatically displayed in Metrics Over Time charts.
+To flag whether a metric value meets performance criteria, set the `passed` value explicitly:
 
-## Use status flags to indicate acceptable performance
-
-Beyond threshold-based status badge, you can also flag whether a metric value is acceptable using the `passed` parameter. This is useful when:
-
-- Business rules are more complex than simple thresholds
-- You want a clear visual indicator for metrics that require attention
-- You plan to trigger alerts or workflows based on pass/fail status
-
-Set the `passed` value explicitly:
-
-```python
+```
 log_metric(
    key="Test Coverage",
    value=0.85,
@@ -62,26 +57,22 @@ log_metric(
 )
 ```
 
-Or determine it programmatically using a custom function:
+In this example:
 
-```python
-def is_acceptable(val): return val >= 0.8
+- The metric value (`0.85`) is above the medium risk threshold (`0.9`) and the threshold is not triggered.
+- Setting `passed=True` displays a [{{< fa check >}} Satisfactory]{.bubble .green-bg} badge to indicate the threshold status.
+- Alternatively, if you need to flag a metric with [{{< fa triangle-exclamation >}} Requires Attention]{.bubble .yellow-bg} badge, set `passed=False`.
 
-log_metric(
-   key="Test Coverage",
-   value=0.75,
-   recorded_at=datetime.now(),
-   thresholds={"medium_risk": 0.9},
-   passed=is_acceptable(0.75)
-)
-```
+## Output examples
 
-In the {{< var validmind.platform >}}, metrics flagged with `passed=False` show a yellow [{{< fa triangle-exclamation >}} Requires Attention]{.bubble .yellow-bg} badge, while those with `passed=True` show a green [{{< fa check >}} Satisfactory]{.bubble .green-bg} badge:
+These examples visualize GINI scores which are commonly used to evaluate classification performance, particularly in credit risk and binary classification problems.
+
+### [{{< fa check >}} Satisfactory]{.bubble .green-bg}
 
 :::: {.flex .flex-wrap .justify-around .w-100}
 
 ::: {.w-50-ns .pa2}
-![A metric that requires attention](/guide/monitoring/monitoring-threshold-requires-attention.png)
+Here, the GINI score fluctuates over time but stays above the medium risk threshold. It ends on an upward trend, with the latest value of `0.75` classified as satisfactory, as indicated in the upper-right corner.
 :::
 
 ::: {.w-50-ns .pa2}
@@ -90,13 +81,34 @@ In the {{< var validmind.platform >}}, metrics flagged with `passed=False` show 
  
 ::::
 
+### [{{< fa triangle-exclamation >}} Requires Attention]{.bubble .yellow-bg}
+
+:::: {.flex .flex-wrap .justify-around .w-100}
+
+::: {.w-50-ns .pa2}
+Here, the GINI score drops to `0.5`, breaching the threshold. This indicates potential performance degradation or model risk, as indicated in the upper-right corner.
+:::
+
+::: {.w-50-ns .pa2}
+![A metric that requires attention](/guide/monitoring/monitoring-threshold-requires-attention.png)
+:::
+ 
+::::
+
 ## Alert notifications
 
-If a metric is logged which doesn't meet the `passed` requirement, an email is sent to model stakeholders, notifying them that the given model is past the given ongoing monitoring test threshold and requires attention. 
+If a logged metric breaches a threshold, alert notifications are triggered. An email is sent to model stakeholders notifying them that the model has a metric that did not pass an ongoing monitoring threshold and requires attention.
 
-Stakeholders who receive this email notification include:
+Stakeholders who receive email alert notification include:
 
-- Model owners
-- Model developers
-- Validators
+- The model owners
+- The model developers
+- The validators
 
+Responding to these notifications involves prioritizing the alerts and taking appropriate action, ideally as part of your documented ongoing monitoring plan.[^2]
+
+<!-- FOOTNOTES -->
+
+[^1]: [Work with metrics over time](/guide/monitoring/work-with-metrics-over-time.qmd)
+
+[^2]: [Ongoing monitoring plan](/guide/monitoring/ongoing-monitoring.qmd#ongoing-monitoring-plan)
