--- a/site/guide/monitoring/ongoing-monitoring.qmd
+++ b/site/guide/monitoring/ongoing-monitoring.qmd
@@ -40,7 +40,6 @@ Monitoring is a critical component of model risk management, as emphasized in re
 - Backtesting to verify predictive power, maintaining transparent reporting and governance, and ensuring ongoing compliance with regulatory standards. 
 - Continuous monitoring to sustain the model's integrity and mitigating risks associated with its use as they arise.
 
-
 ## Monitoring scenarios
 
 Scenarios where ongoing monitoring is warranted:
@@ -132,7 +131,7 @@ Key test areas to pay attention to:
 To try out monitoring, check out the code sample for ongoing monitoring of models.[^3]
 :::
 
-## What's' next
+## What's next
 
 :::{#ongoing-monitoring-listing}
 :::
