Fix fig-alt text

--- a/site/guide/monitoring/review-monitoring-results.qmd
+++ b/site/guide/monitoring/review-monitoring-results.qmd
@@ -94,7 +94,7 @@ The final assessment is that the model requires attention:
 :::
 
 ::: {.w-50-ns .pa2}
-![Prediction probabilities histogram drift](/guide/monitoring/prediction-probabilities-histogram-drift-full.png){fig-alt="An image showing sample monitoring results in the ValidMind Platform" .screenshot}
+![Prediction probabilities histogram drift](/guide/monitoring/prediction-probabilities-histogram-drift-full.png){fig-alt="An image showing a prediction probabilities histogram drift analysis as explained in the text." .screenshot}
 :::
  
 ::::
