--- a/internal/templates/validchecker.qmd
+++ b/internal/templates/validchecker.qmd
@@ -3,55 +3,53 @@ title: "Document Checker"
 date: last-modified
 ---
 
-The **Document Checker** helps ensure that model documentation aligns with relevant regulatory requirements. This feature, powered by ValidMind's LLM capabilities, allows users to run a compliance check against specific regulations by selecting the appropriate framework before review.
 
-Document checks are essential for maintaining compliance and avoiding regulatory risk. They support teams by flagging missing or incomplete areas of documentation and help ensure consistency and accountability throughout the model development lifecycle.
+The **Document Checker** helps ensure that your model documentation aligns with the relevant regulatory requirements of your choice. Powered by {{< var vm.product >}}’s LLM capabilities, this feature allows you to run a compliance check by selecting a Regulatory requirement before review.
+
+Document checks are essential for maintaining compliance and avoiding regulatory risk. They support teams by flagging missing or incomplete areas in documentation and help promote consistency and accountability throughout the model development lifecycle.
+
 
 ::: {.attn}
 
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] You must have permission to edit or submit model documentation
-- [x] The model documentation must already be uploaded and structured in a supported format (e.g., Word, PDF, or Quarto)
-- [x] Access to LLM features enabled in your workspace (check with your admin)
-
+- [x] You must have a model added to your inventory
+- [x] The model must include some documentation
 :::
 
 ## Steps
 
 1. **Navigate to the Document Checker**
-   - From the project dashboard, go to the model you're reviewing.
-   - Click on the **Document Checker** tab in the left-hand menu.
+   - From the homepage dashboard, select **Inventory** in the left-hand menu.
+   - Click the model you'd like to check.
+   - In the left-hand menu, select **Documentation**.
+   - On the documentation page, click the **Document Checker** tab on the right.
 
 2. **Select a regulation**
-   - Use the dropdown menu labeled **“Check against regulation”** to choose the appropriate framework (e.g., SR 11-7, OCC 2011-12, etc.)
-   - The selected regulation will determine the criteria used to evaluate the documentation.
+   - Use the **Select a regulation** dropdown to choose the regulation you'd like to check against (e.g., SR 11-7, E-23, SS1-23).
+   - The Document Checker will use this regulation to evaluate your model’s documentation.
 
 3. **Run the check**
-   - Click **"Start Check"** to initiate the document review.
-   - The system will analyze the uploaded documentation and display flagged sections that do not meet the selected regulatory requirements.
-   - Each issue will be labeled by severity and include a suggestion or reference.
+   - A pop-up with a list of regulation-based questions will appear.
+   - Scroll to the bottom and click **Check Document**.
+   - The system will analyze your documentation and automatically answer the questions using its content.
+   - Click **Expand All** to quickly scan through the findings.
 
 4. **Review and address flagged items**
-   - Click on a flagged issue to view the related section in context.
-   - Revise the documentation directly or leave a comment for your team.
-   - Optionally, re-run the check after making changes.
+   - Each question includes:
+     - A **Finding** – highlighting what’s missing or unclear
+     - A **Recommendation** – providing guidance on what to add or revise
+   - Use the feedback to identify the appropriate sections of your documentation and fill in the gaps.
 
 ## Troubleshooting
 
-- **The regulation list is empty**  
-  → Ensure LLM features are enabled in your workspace and you have the required role.
-
-- **Check fails to start**  
-  → Confirm that your document is uploaded and meets the supported file format.
-
-- **Results seem incomplete or irrelevant**  
-  → Make sure the correct regulation is selected. If the document uses non-standard formatting or terminology, consider aligning with ValidMind’s template recommendations.
+- **All checks fail**  
+  → Make sure your model includes documentation.
 
 ## What's next
 
-Once your document is aligned with regulatory requirements:
-- Submit the documentation for final approval.
+Once your documentation aligns with **regulatory requirements**:
+- Submit it for final approval.
 - Explore [Model Validation tasks](/validation/overview.html) to continue the governance process.
-- Learn more about [how LLM features work](https://docs.validmind.com/about/overview-llm-features.html) and how to customize the prompt or use optional risk assessment questions.
+- Learn more about [how LLM features work](https://docs.validmind.com/about/overview-llm-features.html), including how to customize prompts or include optional risk assessment questions.
