--- a/site/guide/model-documentation/working-with-model-documentation.qmd
+++ b/site/guide/model-documentation/working-with-model-documentation.qmd
@@ -12,6 +12,7 @@ listing:
       - work-with-content-blocks.qmd
       - work-with-test-results.qmd
       - assign-documentation-section-statuses.qmd
+      - Documentchecker.qmd
       - collaborate-with-others.qmd
       - submit-for-approval.qmd
 aliases:
