--- a/site/guide/model-documentation/Documentchecker.qmd
+++ b/site/guide/model-documentation/Documentchecker.qmd
@@ -26,7 +26,7 @@ Use the Document Checker to review your model documentation against a selected r
 2. The Document Checker will use this regulation to evaluate your model’s documentation.
 
 ## Run the check
-1. A pop-up with a list of regulation-based questions will appear.Scroll to the bottom and click **Check Document**.
+1. A list of regulation-based questions will appear. Scroll to the bottom and click **Check Document**.
 3. The system will analyze your documentation and automatically answer the questions using its content.
 4. Click **Expand All** to quickly scan through the findings.
 
