docs: Manage model finding fields (#830)
* Placeholder for manage model finding fields

* Changing headers

* Manage model finding fields draft

* Tweak to write permissions

--- a/site/guide/model-inventory/_add-edit-inventory-fields.qmd
+++ b/site/guide/model-inventory/_add-edit-inventory-fields.qmd
@@ -2,22 +2,24 @@
 
 ::: {.panel-tabset}
 
-#### Add inventory field
+#### Add field
+
 To add a new field, click **{{< fa plus >}} Add Field**:
 
-a. Fields require a [type]{.smallcaps},^[[Inventory field types](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)] a [name]{.smallcaps}, and a [description]{.smallcaps}.
+a. Fields require a [type]{.smallcaps},^[[Field types](#field-types)] a [name]{.smallcaps}, and a [description]{.smallcaps}.
 
     - (Optional) You can also choose to indicate that a field is **[required on registration]{.smallcaps}**.
-    - (Optional) You can also assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.[^edit-fields]
+    - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.[^edit-fields]
 
 a. When you are satisfied with the setup of your field, click **Save**.
 
-#### Edit inventory field
+#### Edit field
+
 To edit an existing field:
 
 a. Hover over the field you would like to edit.
 
-a. When the **{{< fa ellipsis-vertical >}}** appears under the Actions column,, select **{{< fa pencil >}} Edit**.
+a. When the **{{< fa ellipsis-vertical >}}** appears under the Actions column, select **{{< fa pencil >}} Edit Details**.
 
 a. Make your desired changes to your field, then click **Save**.
 
@@ -29,8 +31,8 @@ a. Make your desired changes to your field, then click **Save**.
 [^edit-fields]:
 
     ::: {.callout title="Leave this field blank to leave permissions as default."}
-    - By default, model owners and validators have write access. 
-    - Model developers have read-only access. 
+    - By default, only the <br>[{{< fa hand >}} Customer Admin]{.bubble} role has write access.
+    - All other users will have read-only access unless specified under the **[write permissions]{.smallcaps}** as a model stakeholder type.
 
     ::: {.tc}
     [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
@@ -52,7 +54,7 @@ a. Make your desired changes to your field, then click **Save**.
 1. Fields require a [type]{.smallcaps}, a [name]{.smallcaps}, and a [description]{.smallcaps}.
 
     - (Optional) You can also choose to indicate that a field is **[required on registration]{.smallcaps}**.
-    - (Optional) You can also assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.
+    - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.
 
 1. When you are satisfied with the setup of your field, click **Save**.
 
