Experiment with highlights

--- a/site/index.qmd
+++ b/site/index.qmd
@@ -515,3 +515,6 @@ We've released the ability to manage model stakeholder types within the ValidMin
 
 <!-- CLOSE .column-screen to allow footer to render -->
 :::
+
+<!-- ::: {.preview source="releases/highlights.qmd#category=highlight" height="240" width="430" offset="90"}
+::: -->
