--- a/site/releases/highlights.qmd
+++ b/site/releases/highlights.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Feature highlights"
 listing:
+  id: highlights
   contents:
     - ../releases/**/pr*.qmd
   fields: [date, title, categories, description]
