Display three highlights

--- a/site/index.qmd
+++ b/site/index.qmd
@@ -20,7 +20,7 @@ listing:
   categories: false
   sort-ui: false
   filter-ui: false
-  page-size: 1
+  page-size: 3
 format:
   html:
     css: styles.css
@@ -524,7 +524,7 @@ ValidMind [Academy]{.pink}
 ::: {.w-40-ns}
 
 ::: {.f3 .b}
-Latest Release
+Latest Features
 
 ![](/assets/home-page/release_icon.svg){.mb3 width="30" style="top: 4px"}
 :::
