--- a/site/index.qmd
+++ b/site/index.qmd
@@ -253,7 +253,7 @@ main.content {
 .table {
   border-top: 0px;
   border-bottom: 0px white;
-  margin-top: -75px !important;
+  margin-top: -5px !important;
 }
 
 .table a {
@@ -268,7 +268,23 @@ table.quarto-listing-table a {
   color: #555;
   text-decoration: none;
   font-weight: bold;
+}
 
+tr {
+  position: relative;
+}
+
+tr::before {
+  content: "";
+  position: absolute;
+  left: -40px; /* adjust as needed */
+  top: 50%;
+  transform: translateY(-50%);
+  width: 30px;
+  height: 30px;
+  background-image: url("/assets/home-page/release_icon.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
  /* Add after existing styles */
@@ -526,7 +542,6 @@ ValidMind [Academy]{.pink}
 ::: {.f3 .b}
 Latest Features
 
-![](/assets/home-page/release_icon.svg){.mb3 width="30" style="top: 4px"}
 :::
 
 ::: {.pl4 .mid-gray}
@@ -535,6 +550,8 @@ Latest Features
 :::
 
 :::
+
+[View all releases](/releases/all-releases.qmd)
 
 :::
 
