Swapping out the broken img for favicon in training

--- a/site/training/training-templates/course-slides.qmd
+++ b/site/training/training-templates/course-slides.qmd
@@ -16,7 +16,7 @@ format:
     chalkboard: false
     preview-links: auto
     view-distance: 2
-    logo: /validmind.png
+    logo: /favicon.svg
     footer: "{{< var validmind.training >}} | [Home {{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)"
     revealjs-plugins:
       - slideover
