--- a/site/training/training.qmd
+++ b/site/training/training.qmd
@@ -133,7 +133,7 @@ Our **free** training courses make navigating **AI and governance** straightforw
 ::::
 
 ::: {.attn}
-## ![](/validmind.png){height=30px} Learn by doing
+## ![](/favicon.svg){height=30px} Learn by doing
 
 Our training environment mimics a production environment and includes comprehensive resources such as notebooks with sample code you can run, sample models registered in the model inventory, and draft documentation and validation reports.
 
