Developer portal tweak

--- a/internal/templates/videos/index.qmd
+++ b/internal/templates/videos/index.qmd
@@ -14,7 +14,7 @@ format:
     chalkboard: false
     preview-links: auto
     view-distance: 2
-    logo: validmind.png
+    logo: favicon.svg
     footer: ""
 title-slide-attributes:
   data-background-color: "#083E44"
