Improve releases area on the home page

--- a/site/index.qmd
+++ b/site/index.qmd
@@ -264,10 +264,19 @@ main.content {
   display: none !important;
 }
 
+.listing-date {
+  font-size: 0.8rem;
+  font-weight: bold;
+}
+
 table.quarto-listing-table a {
   color: #555;
   text-decoration: none;
   font-weight: bold;
+}
+
+.quarto-listing-table td:first-child {
+  min-width: 120px;
 }
 
 tr {
@@ -277,14 +286,17 @@ tr {
 tr::before {
   content: "";
   position: absolute;
-  left: -40px; /* adjust as needed */
-  top: 50%;
-  transform: translateY(-50%);
+  left: -40px;
+  top: 8px;
   width: 30px;
   height: 30px;
   background-image: url("/assets/home-page/release_icon.svg");
   background-size: contain;
   background-repeat: no-repeat;
+}
+
+td {
+  vertical-align: top;
 }
 
  /* Add after existing styles */
@@ -519,7 +531,7 @@ ValidMind is a platform that helps identify AI and LLM risks while generating re
 
 ::: {.w-80-ns .flex .flex-wrap .justify-around}
 
-::: {.w-40-ns}
+::: {.w-30-ns}
 
 ::: {.f3 .b}
 ValidMind [Academy]{.pink}
@@ -537,14 +549,14 @@ ValidMind [Academy]{.pink}
 <!-- FILLER COLUMN DO NOT REMOVE -->
 :::
 
-::: {.w-40-ns}
+::: {.w-50-ns}
 
 ::: {.f3 .b}
 Latest Features
 
 :::
 
-::: {.pl4 .mid-gray}
+::: {.pl4 .nb3 .mid-gray}
 
 ::: {#index-releases}
 :::
