Save point for responsive fixes

--- a/site/index.qmd
+++ b/site/index.qmd
@@ -160,6 +160,27 @@ a:hover {
   box-shadow: 0 -4px 16px rgba(6, 58, 59, 0.08);
 }
 
+.home-section-card {
+  background: none;
+  border: none;
+  border-radius: 0;
+  box-shadow: none;
+  padding: 2.5rem 2rem 2rem 2rem;
+  margin: 0 0.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  min-width: 260px;
+  flex: 1 1 0;
+  min-height: 340px;
+  justify-content: space-between;
+}
+
+.flex.flex-wrap.justify-around {
+  align-items: stretch;
+}
+
+
 /*to fix white gap at the top*/
 .quarto-container,
 .page-columns,
@@ -205,19 +226,6 @@ main.content {
   min-height: auto !important;
 }
 
-/* Make body width responsive on mobile */
-@media (max-width: 768px) {
-  .quarto-container {
-    max-width: 100% !important;
-    width: 100% !important;
-  }
-  
-  .page-columns {
-    max-width: 100% !important;
-    width: 100% !important;
-  }
-}
-
 .page-rows-contents {
   grid-template-rows: [content-top] minmax(max-content, 1fr) [content-bottom] minmax(0px, max-content) [page-bottom] !important;
 }
@@ -237,15 +245,9 @@ main.content {
    background-size: 100% auto;
    background-attachment: scroll;
    padding: 2rem 0rem;
-  }
-
-
-/* Release notes listing area */
-.quarto-listing-default {
-  padding: 0px;
-  border: 0px
 }
 
+/* Release notes listing area */
 .pagination {
   display: none !important;
 }
@@ -254,10 +256,6 @@ main.content {
   border-top: 0px;
   border-bottom: 0px white;
   margin-top: -5px !important;
-}
-
-.table a {
-    word-break: break-word;
 }
 
 .table>thead {
@@ -299,9 +297,21 @@ td {
   vertical-align: top;
 }
 
+
  /* Add after existing styles */
 @media (max-width: 768px) {
-  /* Search box mobile styles */
+/* Make body width responsive on mobile */
+  .quarto-container {
+    max-width: 100% !important;
+    width: 100% !important;
+  }
+  
+  .page-columns {
+    max-width: 100% !important;
+    width: 100% !important;
+  }
+
+/* Search box mobile styles */
   #searchbox {
     min-width: auto;
     font-size: 16px; /* Prevents zoom on iOS */
@@ -318,23 +328,18 @@ td {
     margin: 0 !important;
     border-radius: 0 !important;
   }
-  
-  .w-33-ns {
-    width: 100% !important;
-    margin-bottom: 2rem;
-  }
+
   
   .w-40-ns {
     width: 100% !important;
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
   }
   
   .w-30-ns {
     display: none; /* Hide filler columns on mobile */
   }
-  
-  .w-10-ns {
-    display: none; /* Hide small filler columns on mobile */
-  }
+
   
   .flex.flex-wrap.justify-around {
     flex-direction: column;
@@ -372,11 +377,6 @@ td {
     display: flex;
     align-items: center;
     justify-content: center;
-  }
-  
-  /* Improve spacing for touch targets */
-  .w-33-ns, .w-40-ns {
-    padding: 1rem;
   }
 }
 
@@ -427,11 +427,7 @@ td {
 <!-- TOP ROW: Setup + Admin | Model Dev | Model Validation -->
 :::: {.flex .flex-wrap .justify-around .pt5 .pl5 .pr5 .pb4}
 
-::: {.w-10-ns}
-<!-- FILLER COLUMN DO NOT REMOVE -->
-:::
-
-::: {.w-80-ns .flex .flex-wrap .justify-around}
+::: {.w-100-ns .flex .flex-wrap .justify-around}
 
 ::: {.home-section-card}
 ![](/assets/home-page/setup_icon.svg){.mb3 width="48" fig-alt="Decorative graphic without functional meaning"}
@@ -469,10 +465,6 @@ Model Validation
 [**Validator QuickStart**](/get-started/validator/quickstart-validator.qmd){.button .button-green}
 :::
 
-:::
-
-::: {.w-10-ns}
-<!-- FILLER COLUMN DO NOT REMOVE -->
 :::
 
 ::::
