--- a/site/guide/model-documentation/check-documents-for-compliance.qmd
+++ b/site/guide/model-documentation/check-documents-for-compliance.qmd
@@ -71,7 +71,7 @@ Supported regulations include:
 
    ![Select a regulation to check your document against](/guide/model-documentation/check-documents-for-compliance-select-regulation.png){fig-alt="A screenshot showing the Select a regulation dropdown in the checker" .screenshot}
 
-   A list of regulation-based questions appear that you can review and expand.
+   A list of regulation-based questions appears that you can review and expand.
    
 2. Scroll to the bottom and click **Check Document**.
 
@@ -84,8 +84,8 @@ The system analyzes your documentation, identifies gaps, and generates recommend
 
 2. Each question includes:
 
-     - **Finding** — An analysis of how the documentation addresses the question
-     - **Recommendation** — If suggested, guidance on what to revise the documentation to better address the question
+     - **Finding** — An analysis of how the documentation currently addresses the question
+     - **Recommendation** — If suggested, guidance on how to revise the documentation to better address the question
 
    ![Review the finding and recommendation for each question](/guide/model-documentation/check-documents-for-compliance-review.png){fig-alt="A screenshot showing the findings and recommendation made by the checker" .screenshot}
 
