ValidMind Tour spacing tweak

--- a/site/index.qmd
+++ b/site/index.qmd
@@ -425,7 +425,7 @@ td {
 ::: {.center .br3 .shadow-4 .bg-white .w-80-ns}
 
 <!-- TOP ROW: Setup + Admin | Model Dev | Model Validation -->
-:::: {.flex .flex-wrap .justify-around .pt5 .pl5 .pr5 .pb4}
+:::: {.flex .flex-wrap .justify-around .pt5 .pl5 .pr5}
 
 ::: {.w-100-ns .flex .flex-wrap .justify-around}
 
@@ -480,11 +480,7 @@ Model Validation
 
 ::: {.w-80-ns .flex .flex-wrap .justify-around}
 
-::: {.w-30-ns}
-<!-- FILLER COLUMN DO NOT REMOVE -->
-:::
-
-::: { .w-40-ns}
+::: { .w-80-ns}
 
 ::: {.f3 .b}
 ValidMind [Tour]{.pink}
@@ -500,9 +496,6 @@ ValidMind is a platform that helps identify AI and LLM risks while generating re
 
 :::
 
-::: {.w-30-ns}
-<!-- FILLER COLUMN DO NOT REMOVE -->
-:::
 
 :::
 
