Documentation for ValidChecker / Document Checker (#831)
* added document checker

* Validchecker documentation

* recent changes, connected the page

* recent changes, edit the page

* small changes

* Address my own would-be review comments

* Minor edits

* ValidMind Tour spacing tweak

---------

Co-authored-by: Nik Richers <nik@validmind.ai>

--- a/site/guide/model-documentation/working-with-model-documentation.qmd
+++ b/site/guide/model-documentation/working-with-model-documentation.qmd
@@ -12,6 +12,7 @@ listing:
       - work-with-content-blocks.qmd
       - work-with-test-results.qmd
       - assign-documentation-section-statuses.qmd
+      - check-documents-for-compliance.qmd
       - collaborate-with-others.qmd
       - submit-for-approval.qmd
 aliases:
