--- a/site/training/fake-tour/product-tour.qmd
+++ b/site/training/fake-tour/product-tour.qmd
@@ -16,7 +16,7 @@ format:
     chalkboard: false
     preview-links: auto
     view-distance: 2
-    logo: /validmind.png
+    logo: /logo.svg
     footer: "{{< var vm.product >}} | [Home {{< fa person-walking-dashed-line-arrow-right >}}](../../index.qmd)"
   html:
   # Change this to the file name prepended by a _ to get around the global HTML output settings required by _metadata.yml
