Switch fake tour to favicon

--- a/site/training/fake-tour/product-tour.qmd
+++ b/site/training/fake-tour/product-tour.qmd
@@ -16,7 +16,7 @@ format:
     chalkboard: false
     preview-links: auto
     view-distance: 2
-    logo: /logo.svg
+    logo: /favicon.svg
     footer: "{{< var vm.product >}} | [Home {{< fa person-walking-dashed-line-arrow-right >}}](../../index.qmd)"
   html:
   # Change this to the file name prepended by a _ to get around the global HTML output settings required by _metadata.yml
@@ -28,7 +28,7 @@ title-slide-attributes:
 skip_preview: true
 ---
 
-# Learning objectives
+# Learning objectives 
 
 _"As a {{ role }} who is new to {{< var vm.product >}}, I want to learn how to {{ task A }}, {{ task B }}, {{ task C }}, and {{ task D}}."_
 
