Draft section — Search & filter inventory fields

--- a/site/guide/model-inventory/manage-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/manage-model-inventory-fields.qmd
@@ -32,6 +32,39 @@ aliases:
 
 {{< include /guide/model-inventory/_inventory-field-types.qmd >}}
 
+## Search and filter existing inventory fields
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Models, select **Model Inventory Fields**.
+
+3. Narrow down existing inventory fields available to your models by searching or filtering for results:
+
+::: {.panel-tabset}
+
+#### Search fields
+
+a. Click **{{< fa magnifying-glass >}} Search** to search by keyword within an inventory field.
+
+b. Select whether to search in the **Title** or **Description**.
+
+c. Click **Search** to narrow down your results by your entered keyword.
+
+#### Filter fields
+
+a. Click **{{< fa filter >}} Filter** to filter fields by any of the following criteria:
+
+    - **[required on registration]{.smallcaps}**
+    - **[types]{.smallcaps}**
+    - **[workflow triggered by field]{.smallcaps}**
+    - **[write permissions]{.smallcaps}**
+
+b. Click **Apply Filters** to narrow down your results by your configured criteria.
+
+
+:::
+
+
 ## Delete inventory fields
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
