docs: Search and filter existing inventory fields (#848)
* Draft section — Search & filter inventory fields

* Proofreading

--- a/site/guide/model-inventory/manage-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/manage-model-inventory-fields.qmd
@@ -32,6 +32,46 @@ aliases:
 
 {{< include /guide/model-inventory/_inventory-field-types.qmd >}}
 
+## Search and filter existing inventory fields
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Models, select **Model Inventory Fields**.
+
+3. Narrow down existing inventory fields available to your models by searching or filtering for results:
+
+::: {.column-margin}
+
+::: {.callout title="Note that searching and filtering of fields stack."}
+For example, if you first search by keyword for `date` under **Title** without clearing that search, any additional filters applied will only apply to the results returned by that initial search.
+:::
+
+:::
+
+::: {.panel-tabset}
+
+#### Search fields
+
+a. Click **{{< fa magnifying-glass >}} Search** to search by keyword within an inventory field.
+
+b. Select whether to search in the **Title** or **Description**.
+
+c. Click **Search** to narrow down your results by your entered keyword.
+
+
+#### Filter fields
+
+a. Click **{{< fa filter >}} Filter** to filter fields by any of the following criteria:
+
+    - **[required on registration]{.smallcaps}** — Whether or not the field was set up as required on model registration.
+    - **[types]{.smallcaps}** — What type of field it is.[^2]
+    - **[workflow triggered by field]{.smallcaps}** — What workflows are initiated when this field is edited.[^3]
+    - **[write permissions]{.smallcaps}** — Which model stakeholder types have permissions to edit this field.[^4]
+
+b. Click **Apply Filters** to narrow down your results by your configured criteria.
+
+:::
+
 ## Delete inventory fields
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
@@ -52,3 +92,9 @@ aliases:
 <!-- FOOTNOTES -->
 
 [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+
+[^2]: [Inventory field types](#field-types)
+
+[^3]: [Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd)
+
+[^4]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
