Setup for manage document types

--- a/site/guide/templates/working-with-templates.qmd
+++ b/site/guide/templates/working-with-templates.qmd
@@ -4,10 +4,12 @@ date: last-modified
 listing:
   - id: documentation-templates
     type: grid
+    grid-columns: 2
     max-description-length: 250
     sort: false
     fields: [title, description]
     contents:
+      - manage-document-types.qmd
       - view-documentation-templates.qmd
       - customize-documentation-templates.qmd
       - swap-documentation-templates.qmd
