Cleanup documentation > document pt1

--- a/site/guide/templates/customize-document-templates.qmd
+++ b/site/guide/templates/customize-document-templates.qmd
@@ -1,9 +1,10 @@
 ---
-title: "Customize documentation templates"
+title: "Customize document templates"
 date: last-modified
 aliases:
   - /guide/customize-documentation-templates.html
   - /guide/model-documentation/customize-documentation-templates.html
+  - /guide/templates/customize-documentation-templates.html
 ---
 
 Customize {{< var vm.product >}}'s templates for model documentation, validation reports, and ongoing monitoring reports to fit your specific case-by-case needs, such as type or complexity of model or model use case.
@@ -28,7 +29,7 @@ If you are not sure which template or which version of a template your model doc
 
 ## Edit template outline
 
-{{< include _customize-documentation-templates.qmd >}}
+{{< include _customize-document-templates.qmd >}}
 
 ![Editing a template outline](edit-template-outline.gif){fig-alt="A gif demonstrating editing a template outline" .screenshot width=90%}
 
@@ -150,13 +151,13 @@ The documentation template editor validates the YAML changes you make and flags 
 Common issues with YAML include incorrect indenting, imbalanced quotes, or missing colons between keys and values. If you run into issues with incorrect YAML, check the error message provided by the template editor, as it might provide a line and column number where the error occurs. 
 
 ## What's next
-- [Swap documentation templates](swap-documentation-templates.qmd)
+- [Swap documentation templates](swap-document-templates.qmd)
 - [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
 
 
 <!-- FOOTNOTES -->
 
-[^1]: [View documentation templates](view-documentation-templates.qmd)
+[^1]: [View documentation templates](view-document-templates.qmd)
 
 [^2]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
