--- a/site/guide/templates/swap-document-templates.qmd
+++ b/site/guide/templates/swap-document-templates.qmd
@@ -1,9 +1,10 @@
 ---
-title: "Swap documentation templates"
+title: "Swap document templates"
 date: last-modified
 aliases:
   - /guide/swap-documentation-templates.html
   - /guide/model-documentation/swap-documentation-templates.html
+  - /guide/templates/swap-documentation-templates.html
 ---
 
 Swap between different versions of your model documentation or validation report templates within the {{< var validmind.platform >}}. Switch to a completely different template, or apply another version of your current template.
@@ -61,7 +62,7 @@ Swap between different versions of your model documentation or validation report
 
 ## What's next
 
-- [Customize documentation templates](customize-documentation-templates.qmd)
+- [Customize documentation templates](customize-document-templates.qmd)
 - [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
 
 
@@ -85,4 +86,4 @@ Swap between different versions of your model documentation or validation report
 
 [^9]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
 
-<!-- [^10]: [Customize documentation templates](customize-documentation-templates.qmd) -->
+<!-- [^10]: [Customize documentation templates](customize-document-templates.qmd) -->
