--- a/site/guide/templates/view-document-templates.qmd
+++ b/site/guide/templates/view-document-templates.qmd
@@ -1,9 +1,10 @@
 ---
-title: "View documentation templates"
+title: "View document templates"
 date: last-modified
 aliases:
   - /guide/view-documentation-templates.html
   - /guide/model-documentation/view-documentation-templates.html
+  - /guide/templates/view-documentation-templates.html
 ---
 
 View the structure and configuration of existing documentation templates within the {{< var vm.platform >}}. {{< var vm.product >}} provides default templates for documentation, validation reports, and ongoing monitoring plans.  
@@ -19,7 +20,7 @@ View the structure and configuration of existing documentation templates within 
 
 ## Steps
 
-{{< include /guide/templates/_view-documentation-templates.qmd >}}
+{{< include /guide/templates/_view-document-templates.qmd >}}
 
 ## What's next
 
