--- a/site/guide/templates/working-with-templates.qmd
+++ b/site/guide/templates/working-with-templates.qmd
@@ -2,7 +2,7 @@
 title: "Working with templates"
 date: last-modified
 listing:
-  - id: documentation-templates
+  - id: document-templates
     type: grid
     grid-columns: 2
     max-description-length: 250
@@ -10,16 +10,16 @@ listing:
     fields: [title, description]
     contents:
       - manage-document-types.qmd
-      - view-documentation-templates.qmd
-      - customize-documentation-templates.qmd
-      - swap-documentation-templates.qmd
+      - view-document-templates.qmd
+      - customize-document-templates.qmd
+      - swap-document-templates.qmd
 aliases:
   - /guide/working-with-documentation-templates.html
   - /guide/model-documentation/working-with-documentation-templates.html
   - /guide/templates/working-with-documentation-templates.html
 ---
 
-{{< include /guide/templates/_documentation-templates.qmd >}}
+{{< include /guide/templates/_document-templates.qmd >}}
 
-:::{#documentation-templates}
+:::{#document-templates}
 :::
